--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "quote-generator",
     "type": "module",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.21.2"
     }
 }
