--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.21.2"
+    },
+    "scripts": {
+        "start": "node backend/server.js"
     }
 }
