--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     },
     "scripts": {
         "start": "node backend/server.js"
+    },
+    "devDependencies": {
+        "@flydotio/dockerfile": "^0.7.8"
     }
 }
