--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
         "express": "^4.21.2"
     },
     "scripts": {
-        "start": "node backend/server.js"
+        "start": "node backend/server.js",
+        "dev" : "nodemon backend/server.js"
     },
     "devDependencies": {
-        "@flydotio/dockerfile": "^0.7.8"
+        "@flydotio/dockerfile": "^0.7.8",
+        "nodemon": "^3.1.9"
     }
 }
