--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "express": "^4.21.2"
     },
     "scripts": {
-        "start": "node backend/server.js",
-        "dev": "nodemon backend/server.js"
+        "start": "node backend/server/server.js",
+        "dev": "nodemon backend/server/server.js"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.7.8",
