--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,13 @@
     "dependencies": {
         "axios": "^1.8.3",
         "cors": "^2.8.5",
-        "express": "^4.21.2"
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "mongoose": "^8.12.1"
     },
     "scripts": {
-        "start": "node backend/server/server.js",
-        "dev": "nodemon backend/server/server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.7.8",
