--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
         "express": "^4.21.2",
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.12.1"
+        "mongoose": "^8.12.1",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     },
     "scripts": {
         "start": "node server.js",
