--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.7.8",
-        "nodemon": "^3.1.9"
+        "nodemon": "^3.1.9",
+        "vitest": "^3.1.2"
     }
 }
