--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     },
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "test": "vitest --run --reporter verbose",
+        "test:watch": "vitest"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.7.8",
