--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "devDependencies": {
         "@flydotio/dockerfile": "^0.7.8",
         "nodemon": "^3.1.9",
+        "supertest": "^7.1.0",
         "vitest": "^3.1.2"
     }
 }
