--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,12 @@
         "start": "node server.js",
         "dev": "nodemon server.js",
         "test": "vitest --run --reporter verbose",
-        "test:watch": "vitest"
+        "test:watch": "vitest",
+        "coverage": "vitest run --coverage"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.7.8",
+        "@vitest/coverage-v8": "^3.1.2",
         "nodemon": "^3.1.9",
         "supertest": "^7.1.0",
         "vitest": "^3.1.2"
